// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioPlay Snapshots Renders the errored AudioPlayer UI 1`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-audioPlayer"
>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The audio player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
  />
</div>
`;

exports[`AudioPlay Snapshots Renders the well formatted AudioPlayer UI  1`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-audioPlayer"
>
  <h2
    className="chakra-heading css-1uhtpq1"
    data-testid="ds-heading"
  >
    Audio Player Heading
  </h2>
  <p
    className="chakra-text css-ap6r8h"
    data-testid="ds-text"
  >
    Audio Player description text.
  </p>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The audio player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
  <div
    className="css-1xdhyk6"
    dangerouslySetInnerHTML={
      {
        "__html": "Audio Player helper text.",
      }
    }
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
  />
</div>
`;

exports[`AudioPlay Snapshots Renders the well formatted AudioPlayer UI  2`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-audioPlayer"
>
  <div
    className="css-0"
    dangerouslySetInnerHTML={
      {
        "__html": "<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX0uqkwkR49kK?utm_source=generator" width="100%" height="380" frameborder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" title="Embedded audio player"></iframe>",
      }
    }
  />
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The audio player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
  />
</div>
`;

exports[`AudioPlay Snapshots Renders the well formatted AudioPlayer UI  3`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-audioPlayer"
>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The audio player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
  />
</div>
`;

exports[`AudioPlay Snapshots Renders the well formatted AudioPlayer UI  4`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-audioPlayer"
>
  <div
    className="css-0"
    dangerouslySetInnerHTML={
      {
        "__html": "<iframe title="Libsyn Player" style="border: none" src="//html5-player.libsyn.com/embed/episode/id/18268511/height/90/theme/custom/thumbnail/yes/direction/backward/render-playlist/no/custom-color/87A93A/" height="90" width="100%" scrolling="no" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" oallowfullscreen="" msallowfullscreen=""></iframe>",
      }
    }
  />
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The audio player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
  />
</div>
`;
